QUIC - fix flaky URLRequestQuicTest.

o root cause test was needlessly using a fixed port with
  QuicSimpleServer, causing server initialization to fail
  if tests run in parallel.
o In case QuicSimpleServer fails during startup, Shutdown would
  crash because it null-dereferenced socket_.

R=rch@chromium.org

Bug: 763098
Change-Id: Ic73ea2ec4aa710473829aac3243074a4c1131322
Reviewed-on: https://chromium-review.googlesource.com/816294
Reviewed-by: Ryan Hamilton <rch@chromium.org>
Commit-Queue: Buck Krasic <ckrasic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522699}
Former-commit-id: 70b06ef6ee7584f8220fd70b73ff66ce1b25b1c6